dartdoc_test/test/testdata/run analyze command with verbose flag.txt
Extracting code samples ...
Analyzing code samples ...
No issues found!
No issues found!
original error: .dartdoc_test/example_0.dart:115:115: Expected to find ';'.
line 29, column 34 of example/lib/example.dart: Expected to find ';'.
   ╷
29 │   /// final result = SimpleClass().add(2, 3)  //
   │                                  ^
   ╵


.dartdoc_test/example_0.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_1.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_2.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
original error: .dartdoc_test/example_3.dart:99:110: Local variable 'isPalindrome' can't be referenced before it is declared.
line 79, column 11 of example/lib/example.dart: Local variable 'isPalindrome' can't be referenced before it is declared.
   ╷
79 │ /// final isPalindrome = isPalindrome('A man, a plan, a canal, Panama');
   │           ^^^^^^^^^^^^
   ╵


.dartdoc_test/example_3.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_3.dart:30:58: Unused import: '../example/lib/example.dart'. (ignored because issue occurs in the generated code)
original error: .dartdoc_test/example_4.dart:90:92: Local variable 'gcd' can't be referenced before it is declared.
line 93, column 11 of example/lib/example.dart: Local variable 'gcd' can't be referenced before it is declared.
   ╷
93 │ /// final gcd = gcd(48, 18);
   │           ^^^
   ╵


.dartdoc_test/example_4.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_4.dart:30:58: Unused import: '../example/lib/example.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/example_5.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:30:38: Unused import: 'dart:io'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:48:71: Unused import: 'package:path/path.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:86:130: Unused import: 'package:analyzer/dart/analysis/results.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:140:175: Unused import: 'package:analyzer/dart/ast/ast.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:185:224: Unused import: 'package:analyzer/dart/ast/visitor.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:234:265: Unused import: 'package:markdown/markdown.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_0.dart:275:312: Unused import: 'package:source_span/source_span.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:7:20: Unused import: 'dart:convert'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:30:38: Unused import: 'dart:io'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:48:71: Unused import: 'package:path/path.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:86:130: Unused import: 'package:analyzer/dart/analysis/results.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:140:175: Unused import: 'package:analyzer/dart/ast/ast.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:185:224: Unused import: 'package:analyzer/dart/ast/visitor.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:234:265: Unused import: 'package:markdown/markdown.dart'. (ignored because issue occurs in the generated code)
.dartdoc_test/extractor_1.dart:275:312: Unused import: 'package:source_span/source_span.dart'. (ignored because issue occurs in the generated code)
FAILED: 3 issues found (Found 10 code samples in 3 files)